--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,18 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VNP_TMN_CODE=Y4U88XFK
+VNP_HASHSECRET=DTHXNFNBUMNKFKQOZVHTXUXNUQUUXMTV
+VNP_URL=http://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_RETURN_URL=https://toandt.dev/vnpay/return
+
+MOMO_URL_CREATE_PAYMENT=https://test-payment.momo.vn/v2/gateway/api/create
+MOMO_URL_CONFIRM_PAYMENT=https://test-payment.momo.vn/v2/gateway/api/confirm
+MOMO_PARTNER_CODE=MOMONBGK20220215
+MOMO_PARTNER_NAME=
+MOMO_STORE_ID=
+MOMO_IPN_URL=http://571a-118-68-233-95.ngrok.io/momo/confirm
+MOMO_REDIRECT_URL=http://127.0.0.1:8000/momo
+MOMO_ACCESS_KEY=SixI4liVARbNC5uY
+MOMO_SECRET_KEY=0QcqOvywxUENDpnqRicWFAfqA7Apwugu
